made changes using display-flex

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="">References</a>
             <a href="">Exercises</a>
             <a href="">Videos</a>
-        </nav>
+        </nav> 
         <div class="courses">
             <a href="" id="space">Spaces</a>
             <a href="" id="paid">Paid Courses</a>
@@ -51,19 +51,8 @@
 
         <div class="right-box">
             <div class="inner-right-box">
-                <h1>HTML Example: </h1>
-                <!-- <div id="code"> 
-                    <!DOCTYPE html>
-                    <html>
-                    <title>HTML Tutorial</title>
-                    <body>
-                        <h1>This is a heading</h1>
-                        <p>This is a paragraph.</p>
-
-                    </body>
-                    </html>
-                </div> -->
-                <a href="" >Try it Yourself</a>
+                <h1 style="margin: 10px;">HTML Example: </h1>   
+                <a href="" id="learn-html" class="tryit-button" >Try it Yourself</a>
             </div>
         </div>
     </div>
