added next section of CSS

--- a/index.html
+++ b/index.html
@@ -56,6 +56,26 @@
             </div>
         </div>
     </div>
+    <div class="green-box">
+        <div class="left-box">
+            <h1 class="text-of-left-box" style="font-size: 100px; font-weight: bold; margin-top: -8px; color: black;">CSS
+            </h1>
+            <p class="text-of-left-box" style="font-size: 19px; margin-bottom: 1.2em; color: black;">The language for styling web pages</p>
+            <div class="left-box-buttons buttons-of-black-box" >
+                <a href="" id="learn-css" >Learn CSS</a>
+                <br>
+                <a href="" id="css-refer" >CSS Reference</a>
+                <br>
+            </div>
+        </div>
+
+        <div class="right-box">
+            <div class="inner-right-box">
+                <h1 style="margin: 10px;">CSS Example: </h1>   
+                <a href="" id="learn-html" class="tryit-button" >Try it Yourself</a>
+            </div>
+        </div>
+    </div>
 
 </body>
 
