--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <div class="right-box">
             <div class="inner-right-box">
-                <h1 style="margin: 10px;">HTML Example: </h1>   
+                <h3 style="margin: 10px;">HTML Example: </h3>   
                 <a href="" id="learn-html" class="tryit-button" >Try it Yourself</a>
             </div>
         </div>
@@ -71,12 +71,31 @@
 
         <div class="right-box">
             <div class="inner-right-box">
-                <h1 style="margin: 10px;">CSS Example: </h1>   
+                <h3 style="margin: 10px;">CSS Example: </h3>   
                 <a href="" id="learn-html" class="tryit-button" >Try it Yourself</a>
             </div>
         </div>
     </div>
+    <div class="yellow-box">
+        <div class="left-box">
+            <h1 class="text-of-left-box" style="font-size: 100px; font-weight: bold; margin-top: -8px; color: black;">JavaScript
+            </h1>
+            <p class="text-of-left-box" style="font-size: 19px; margin-bottom: 1.2em; color: black; ">The language for programming web pages</p>
+            <div class="left-box-buttons buttons-of-black-box" >
+                <a href="" id="learn-css" >Learn JavaScript</a>
+                <br>
+                <a href="" id="css-refer" >JavaScript Reference</a>
+                <br>
+            </div>
+        </div>
 
+        <div class="right-box">
+            <div class="inner-right-box">
+                <h3 style="margin: 10px;">JavaScript Example: </h3>   
+                <a href="" id="learn-html" class="tryit-button" >Try it Yourself</a>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
