added code section and box-shadows

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>W3Schools Online Web Tutorials</title>
     <link rel="stylesheet" href="css/style.css">
-    
-   
+
+
 </head>
 
 <body>
@@ -23,7 +23,7 @@
             <a href="">References</a>
             <a href="">Exercises</a>
             <a href="">Videos</a>
-        </nav> 
+        </nav>
         <div class="courses">
             <a href="" id="space">Spaces</a>
             <a href="" id="paid">Paid Courses</a>
@@ -38,61 +38,100 @@
         <div class="left-box">
             <h1 class="text-of-left-box" style="font-size: 100px; font-weight: bold; margin-top: -8px;">HTML
             </h1>
-            <p class="text-of-left-box" style="font-size: 19px; margin-bottom: 1.2em;">The language for building web pages</p>
-            <div class="left-box-buttons buttons-of-black-box" >
-                <a href="" id="learn-html" >Learn HTML</a>
+            <p class="text-of-left-box" style="font-size: 19px; margin-bottom: 1.2em;">The language for building web
+                pages</p>
+            <div class="left-box-buttons buttons-of-black-box">
+                <a href="" id="learn-html">Learn HTML</a>
                 <br>
-                <a href="" id="video-tuto" >Video Tutorial</a>
+                <a href="" id="video-tuto">Video Tutorial</a>
                 <br>
-                <a href="" id="html-refer" >HTML Reference</a>
+                <a href="" id="html-refer">HTML Reference</a>
                 <br>
             </div>
         </div>
 
         <div class="right-box">
             <div class="inner-right-box">
-                <h3 style="margin: 10px;">HTML Example: </h3>   
-                <a href="" id="learn-html" class="tryit-button" >Try it Yourself</a>
+                <h3 style="margin: 10px;">HTML Example: </h3>
+                <div class="code-html green-border">
+
+                    <span class="tagnamecolor" style="color:brown"><span class="tagcolor"
+                            style="color:mediumblue">&lt;</span>!DOCTYPE<span class="attributecolor" style="color:red">
+                            html</span><span class="tagcolor" style="color:mediumblue">&gt;</span></span><br>
+                    <span class="tagnamecolor" style="color:brown"><span class="tagcolor"
+                            style="color:mediumblue">&lt;</span>html<span class="tagcolor"
+                            style="color:mediumblue">&gt;</span></span><br>
+                    <span class="tagnamecolor" style="color:brown"><span class="tagcolor"
+                            style="color:mediumblue">&lt;</span>title<span class="tagcolor"
+                            style="color:mediumblue">&gt;</span></span>HTML Tutorial<span class="tagnamecolor"
+                        style="color:brown"><span class="tagcolor" style="color:mediumblue">&lt;</span>/title<span
+                            class="tagcolor" style="color:mediumblue">&gt;</span></span><br>
+                    <span class="tagnamecolor" style="color:brown"><span class="tagcolor"
+                            style="color:mediumblue">&lt;</span>body<span class="tagcolor"
+                            style="color:mediumblue">&gt;</span></span><br><br>
+                    <span class="tagnamecolor" style="color:brown"><span class="tagcolor"
+                            style="color:mediumblue">&lt;</span>h1<span class="tagcolor"
+                            style="color:mediumblue">&gt;</span></span>This is a heading<span class="tagnamecolor"
+                        style="color:brown"><span class="tagcolor" style="color:mediumblue">&lt;</span>/h1<span
+                            class="tagcolor" style="color:mediumblue">&gt;</span></span><br>
+                    <span class="tagnamecolor" style="color:brown"><span class="tagcolor"
+                            style="color:mediumblue">&lt;</span>p<span class="tagcolor"
+                            style="color:mediumblue">&gt;</span></span>This is a paragraph.<span class="tagnamecolor"
+                        style="color:brown"><span class="tagcolor" style="color:mediumblue">&lt;</span>/p<span
+                            class="tagcolor" style="color:mediumblue">&gt;</span></span><br><br>
+                    <span class="tagnamecolor" style="color:brown"><span class="tagcolor"
+                            style="color:mediumblue">&lt;</span>/body<span class="tagcolor"
+                            style="color:mediumblue">&gt;</span></span><br>
+                    <span class="tagnamecolor" style="color:brown"><span class="tagcolor"
+                            style="color:mediumblue">&lt;</span>/html<span class="tagcolor"
+                            style="color:mediumblue">&gt;</span></span>
+
+                </div>
+                <a href="" id="learn-html" class="tryit-button">Try it Yourself</a>
             </div>
         </div>
     </div>
     <div class="green-box">
         <div class="left-box">
-            <h1 class="text-of-left-box" style="font-size: 100px; font-weight: bold; margin-top: -8px; color: black;">CSS
+            <h1 class="text-of-left-box" style="font-size: 100px; font-weight: bold; margin-top: -8px; color: black;">
+                CSS
             </h1>
-            <p class="text-of-left-box" style="font-size: 19px; margin-bottom: 1.2em; color: black;">The language for styling web pages</p>
-            <div class="left-box-buttons buttons-of-black-box" >
-                <a href="" id="learn-css" >Learn CSS</a>
+            <p class="text-of-left-box" style="font-size: 19px; margin-bottom: 1.2em; color: black;">The language for
+                styling web pages</p>
+            <div class="left-box-buttons buttons-of-black-box">
+                <a href="" id="learn-css">Learn CSS</a>
                 <br>
-                <a href="" id="css-refer" >CSS Reference</a>
+                <a href="" id="css-refer">CSS Reference</a>
                 <br>
             </div>
         </div>
 
         <div class="right-box">
             <div class="inner-right-box">
-                <h3 style="margin: 10px;">CSS Example: </h3>   
-                <a href="" id="learn-html" class="tryit-button" >Try it Yourself</a>
+                <h3 style="margin: 10px;">CSS Example: </h3>
+                <a href="" id="learn-html" class="tryit-button">Try it Yourself</a>
             </div>
         </div>
     </div>
     <div class="yellow-box">
         <div class="left-box">
-            <h1 class="text-of-left-box" style="font-size: 100px; font-weight: bold; margin-top: -8px; color: black;">JavaScript
+            <h1 class="text-of-left-box" style="font-size: 100px; font-weight: bold; margin-top: -8px; color: black;">
+                JavaScript
             </h1>
-            <p class="text-of-left-box" style="font-size: 19px; margin-bottom: 1.2em; color: black; ">The language for programming web pages</p>
-            <div class="left-box-buttons buttons-of-black-box" >
-                <a href="" id="learn-css" >Learn JavaScript</a>
+            <p class="text-of-left-box" style="font-size: 19px; margin-bottom: 1.2em; color: black; ">The language for
+                programming web pages</p>
+            <div class="left-box-buttons buttons-of-black-box">
+                <a href="" id="learn-css">Learn JavaScript</a>
                 <br>
-                <a href="" id="css-refer" >JavaScript Reference</a>
+                <a href="" id="css-refer">JavaScript Reference</a>
                 <br>
             </div>
         </div>
 
         <div class="right-box">
             <div class="inner-right-box">
-                <h3 style="margin: 10px;">JavaScript Example: </h3>   
-                <a href="" id="learn-html" class="tryit-button" >Try it Yourself</a>
+                <h3 style="margin: 10px;">JavaScript Example: </h3>
+                <a href="" id="learn-html" class="tryit-button">Try it Yourself</a>
             </div>
         </div>
     </div>
