added media quries and completed nav-bar

--- a/index.html
+++ b/index.html
@@ -7,33 +7,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>W3Schools Online Web Tutorials</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/navbar-style.css">
 
 
 </head>
 
 <body>
-    <div class="topbar">
-
+    <header>
         <div class="logo">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a0/W3Schools_logo.svg" alt="logo">
+            <a href="https://w3schools.com"><img
+                src="https://upload.wikimedia.org/wikipedia/commons/a/a0/W3Schools_logo.svg" alt="logo">
+        </a>
         </div>
 
         <nav class="navbar">
-            <a href="">Tutorials</a>
-            <a href="">References</a>
-            <a href="">Exercises</a>
-            <a href="">Videos</a>
+            <a href="#">Tutorials</a>
+            <a href="#">References</a>
+            <a href="#">Exercises</a>
+            <a href="#">Videos <span class="new">NEW</span></a>
         </nav>
-        <div class="courses">
-            <a href="" id="space">Spaces</a>
-            <a href="" id="paid">Paid Courses</a>
-        </div>
 
         <div class="right-bar">
+            <a href="" id="website">Website <span class="new">NEW</span></a>
+            <a href="" id="paid">Paid Courses</a>
             <a href="" id="login">Log in</a>
         </div>
 
-    </div>
+    </header>
     <div class="black-box">
         <div class="left-box">
             <h1 class="text-of-left-box" style="font-size: 100px; font-weight: bold; margin-top: -8px;">HTML
